@@ -99,6 +99,9 @@
 (defmethod make-pane-2 ((type (eql 'clim:label-pane)) &rest initargs)
   (apply #'make-instance 'gtk-label-pane initargs))
 
+(defmethod make-pane-2 ((type (eql 'clim:generic-option-pane)) &rest initargs)
+  (apply #'make-instance 'gtk-option-pane initargs))
+
 (defmethod adopt-frame :after
     ((fm gtkairo-frame-manager) (frame application-frame))
   ())
